Primeiros passos do RF10

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>ligacao</groupId>
   <artifactId>ligacao</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <name>LigacaoApp</name>
 
 <dependencies>
