feat: adiciona dependência para testes

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
             <version>1.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.5.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
