--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
 
     </dependencies>
 
